-Specificare parametri intorsi -Curatare Cod